--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media (max-width: 767.98px) {
+    .content{
+    display: grid;
+    grid-column: 5;
+    }
+        .item {
+            grid-column-start: 2;
+        }
+}
